<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <DUT Name="ST_RT6DComponent" Id="{bbf7c860-7820-479d-b817-d79f5250f055}">
    <Declaration><![CDATA[TYPE ST_RT6DComponent :
STRUCT
	nSize : UDINT;
	nType : UDINT;
	nBodies : UDINT;
	nDropRate : INT;
	nOutOfSyncRate : INT;
	bodies : ARRAY [0..99] OF ST_RT6D;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>