<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <DUT Name="ST_RTComponentData" Id="{5706897f-bbbf-41a8-ad08-33fb6e0fd068}">
    <Declaration><![CDATA[TYPE ST_RTComponentData :
STRUCT
	nSize : UDINT;
	nType : UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>